--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Blogger Box Backend 2 
+
+
+spring.datasource.url=jdbc:postgresql://mouse.db.elephantsql.com:5432/kpeunzvt
+spring.datasource.username=kpeunzvt
+spring.datasource.password=sJX6pospoKGlLTMnETmD1FbyvuVqfR7h
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+
+
